Added project files except node_modules

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@types/node": "^20.12.5",
     "express": "^4.19.2",
+    "mongoose": "^8.3.0",
     "nodemon": "^3.1.0"
   }
 }
